add to cart data inlocalstorages

--- a/src/stylesheets/Layout.css
+++ b/src/stylesheets/Layout.css
@@ -28,7 +28,7 @@
     padding:10px;
     text-align: center;
     background-color:rgb(69, 88, 149) ;
-    position: absolute;
+    position: relative;
     bottom: 0;
     left: 0;
     right:0;
