--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+body,html{
+  overflow-x: hidden;
+}
+
 code {
   font-family: 'Montserrat', sans-serif;
 }
