register form completed design

--- a/src/stylesheets/Authentication.css
+++ b/src/stylesheets/Authentication.css
@@ -11,22 +11,22 @@
 */
 
 .register-parent{
-    min-height: 100vh;
+    height: 100vh;
     background-color: rgb(178, 191, 187);
-    position: absolute;
-    right: 0;
-    left: 0;
-    top: 0;
 } 
 
  .register-parent .row{
-    min-height: 100vh;
+    height: 100vh;
     align-items: center;
 }
 
 .register-top{
     height: 50%;
     background-color: rgba(17, 137, 137, 0.843);
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 0;
 }
 
 .register-form {
@@ -35,3 +35,38 @@
     background-color: aliceblue;
 }
 
+.z1{
+    z-index: 1;
+}
+
+/* login style */
+
+
+.login-parent{
+    height: 100vh;
+    background-color: rgb(178, 191, 187);
+} 
+
+ .login-parent .row{
+    height: 100vh;
+    align-items: center;
+}
+
+.login-top{
+    height: 50%;
+    background-color: rgba(17, 137, 137, 0.843);
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 0;
+}
+
+.login-form {
+    padding:20px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+    background-color: aliceblue;
+}
+
+.z1{
+    z-index: 1;
+}
